@startuml diagrama
title Diagrama de Clases - Módulo 3


class Ejercicio {
 - estado
 - listPreguntas : Pregunta
 + agregarPregunta(pregunta: Pregunta)
}

abstract class Pregunta {
    - instruccion : Instruccion
    - listOpciones : Opcion
    + responder()
}
class PreguntaOpcionMultiple{
}
enum EstadoEjercicio{
+ ACTIVO
+ INACTIVO
+ PAUSADO
}

class Respuesta{}

class Instruccion {}
Pregunta --R> Instruccion
Ejercicio o-- Pregunta
Pregunta <|-- PreguntaOpcionMultiple
Pregunta <|-- PreguntaCompletar
Pregunta --L> Opcion
Ejercicio --R> EstadoEjercicio
@enduml